wrapping issue fix for textareas

--- a/app/themes/default/css/newui.css
+++ b/app/themes/default/css/newui.css
@@ -6689,6 +6689,7 @@ td.empty {
   line-height: 135%;
   text-indent: 0;
   padding: 4px;
+  word-break: normal;
 }
 .form select.multiple {
   padding: 4px 4px 4px 6px;
